--- a/galeria/package.json
+++ b/galeria/package.json
@@ -16,6 +16,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
